src/app/styles/base.scss
body {
  font: var(--font-m-primary);
  color: var(--text-dark-color);
  background-color: var(--bg-color);
}

.no-scroll {
  overflow: hidden;
}

@mixin center-container {
  width: 100%;
  margin: auto;
}

.container {
  max-width: var(--container-max-width);
  padding: 0 var(--container-padding);
  @include center-container;
}

.container-slider-nav {
  max-width: var(--container-slider-nav);
  padding: 0 var(--slider-nav-padding);
  @include center-container;
  position: relative;
}

.left-container {
  width: 100%;
  max-width: calc((50vw + (var(--container-max-width)) / 2));
  padding-right: var(--container-padding);
}

.right-container {
  width: 100%;
  max-width: calc((50vw + (var(--container-max-width)) / 2));
  padding-left: var(--container-padding);
  margin-right: 0;
  margin-left: auto;
}

svg {
  width: 28px;
  height: 28px;
}

.decorator {
  position: absolute;
  pointer-events: none;

  background-color: var(--accent-color);
  bottom: 0;
  left: 0;

  &.static {
    position: relative;
  }

  &.top {
    top: 0;
  }

  &:before, &:after {
    content: "";
    position: absolute;
    background-color: var(--accent-color);
    display: block;
    width: 5px;
    height: 5px;
  }

  &.gray {
    background-color: var(--gray);

    &:before, &:after {
      background-color: var(--gray);
    }
  }

  &.croppedPoligon {
    &:before, &:after {
      clip-path: polygon(0 0, 100% 0%, 100% 100%);
    }
  }

  &.full {
    width: 100%;
    height: 1px;

    &:before {
      top: 50%;
      left: 0;
      transform: translate(-50%, -50%) rotate(45deg);
    }

    &:after {
      top: 50%;
      right: 0;
      transform: translate(50%, -50%) rotate(45deg) scale(-1);
    }
  }

  &.vertical {
    width: 1px;
    height: 15px;

    &:before {
      top: 0;
      left: 50%;
      transform: translate(-50%, -50%) rotate(45deg);
    }

    &:after {
      display: none;
    }
  }

  &.vertical.full {
    width: 1px;
    height: 100%;

    &:after {
      display: block;
      top: 100%;
    }
  }

  &.vertical.croppedPoligon {
    &:before {
      clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
    }

    &:after {
      clip-path: polygon(0 100%, 100% 0%, 100% 100%);
    }
  }

  &.withTransition {
    transition: left var(--delay) ease, top var(--delay) ease;
  }

}

.currentPrice {
  color: var(--accent-color);
  font: 24px / 130% var(--font-family-secondary);
  font-weight: 900;
}

.prevPrice {
  color: var(--gray);
  text-decoration: line-through;
}

.pageSpacing {
  padding-top: 50px;
  padding-bottom: 200px;
}

.pageTitle {
  font: 60px / 100% var(--font-family-third);
  margin-top: 30px;
  margin-bottom: 40px;

  &.margin-0 {
    margin-top: 0;
    margin-bottom: 0;
  }
}

.blockTitle {
  font: 25px / 115% var(--font-family-secondary);
  font-weight: 900;
}

@include media-max-tablet-s {
  .pageSpacing {
    padding-top: 30px;
    padding-bottom: 160px;
  }

  .pageTitle {
    font-size: 50px;
    line-height: 130%;
    margin-top: 20px;
    margin-bottom: 30px;
  }
};

@include media-max-mobile-s {
  .pageSpacing {
    padding-top: 20px;
    padding-bottom: 120px;
  }

  .pageTitle {
    font-size: 25px;
  }

  .blockTitle {
    font-size: 17px;
  }
};

